assets/css/style.css
/* IMPOSTAZIONI GENERALI */

body {
  font-family: Poppins, "Helvetica Neue", sans-serif;
  line-height: 1.6;
  padding: 15px;
  background-image: url("../img/sfondo.png");
  background-position: center center;
}

* {
  box-sizing: border-box;
}

hr {
  display: none;
} /* rimuove l'elemento */

/* HEADER */
header {
  background: rgb(0, 160, 198);
  background: linear-gradient(
    180deg,
    rgba(0, 160, 198, 1) 0%,
    rgba(3, 109, 134, 1) 68%
  );
  text-align: center;
  text-transform: uppercase;
  font-weight: bold;
  color: white;
  box-shadow: 0 3px 3px #444;
  margin-bottom: 1.5em;
  padding: 2em 1.5em;
}

@media screen and (min-width: 800px) {
  header {
    padding: 1em;
  }
}

@media screen and (max-width: 1199px) {
  header .brand img {
    margin-bottom: 20px;
  }
}

@media screen and (min-width: 1200px) {
  header {
    text-align: left;
  }
  header .brand,
  header nav,
  header .brand p {
    display: inline-block;
  }

  header .brand {
    width: 75%;
  }
  header .brand img {
    vertical-align: middle;
  }
  header .brand p {
    margin-bottom: 0;
  }
}

header nav ul {
  margin: 0;
}
header nav li {
  list-style: none;
  display: inline-block;
  margin-right: 10px;
}
header nav li:last-child {
  margin-right: 0;
}
header nav li a {
  color: white;
  text-decoration: none;
}
header nav li a:hover {
  color: red;
}
header nav li a::before {
  content: "\22c6\0020";
}

/* MAIN */
main {
  background-color: #fff;
  box-shadow: 0 3px 3px #444;
  padding: 2em 1em;
  margin-bottom: 1.5em;
}
@media screen and (min-width: 700px) {
  main {
    padding: 2em;
  }
}

section {
  background-color: #e3e3e3;
  padding: 1.5em 1em;
  margin-bottom: 2em;
  position: relative;
}

section h2 {
  text-align: center;
  color: #333;
  font-size: 1.4rem;
  margin-bottom: 1.7rem;
  font-weight: bold;
  background-color: #a3a3a3;
  padding: 0px 1em;
}

/* ELEMENTI NEL MAIN - ARTICLE */

h1 {
  font-size: 2.6rem;
  line-height: 1.2;
  font-weight: bold;
  letter-spacing: -0.03em;
  margin-bottom: 0.7em;
}

p,
address,
ul,
ol,
dl,
blockquote {
  margin-bottom: 1.2em;
}

h1 + p {
  color: #a0a0a0;
}

@media screen and (max-width: 499px) {
  p,
  ul,
  ol {
    font-size: 1.4rem;
  }

  h2 {
    font-size: 1.8rem;
    font-weight: 700;
  }
}

@media screen and (min-width: 500px) {
  h1 {
    font-size: 3rem;
  }

  p,
  ul,
  ol {
    font-size: 1.2rem;
  }

  h2 {
    font-size: 1.4rem;
    font-weight: 700;
  }
}

@media screen and (min-width: 700px) {
  h1 {
    font-size: 3.6rem;
  }
}

@media screen and (min-width: 1200px) {
  body {
    line-height: 2;
  }
  section {
    border-radius: 20px;
  }
}

.imgLeft {
  margin-right: 20px;
  border: 4px solid #00a0c6;
  outline: 4px solid #a02571;
  padding: 3px;
}
ul,
ol {
  margin-left: 2em;
}
a {
  color: #00a0c6;
  font-weight: bold;
}
strong {
  color: #a02571;
  font-weight: bold;
}
code {
  background-color: #e3e3e3;
  border: 1px solid #969494;
  border-radius: 5px;
}
iframe {
  width: 100%;
  height: auto;
  margin-bottom: 2em;
  border-radius: 20px;
}

@media screen and (min-width: 1200px) {
  iframe,
  section {
    display: inline-block;
    width: 50%;
    margin-inline: -2px;
    vertical-align: middle;
    margin-top: 30px;
  }

  iframe {
    height: 267px;
  }
}

/* TABELLE */
table {
  margin-bottom: 2em;
}
@media screen and (min-width: 500px) {
  table {
    margin: 0 auto 2em;
  }
}
@media screen and (min-width: 700px) {
  table {
    width: 70%;
    margin-block-start: 5rem;
    margin-block-end: 6rem;
  }
}

caption {
  font-weight: bold;
  font-style: italic;
}
thead tr {
  background-color: #3f6bca;
  color: #ffffff;
}
th,
td {
  padding: 12px 15px;
  vertical-align: bottom;
  text-align: center;
}
tbody tr {
  border-bottom: 1px solid #dddddd;
}

tbody tr:nth-of-type(even) {
  background-color: #f3f3f3;
}

tbody tr:last-of-type {
  border-bottom: 2px solid #3f6bca;
}

/* FORM */
input {
  padding: 5px;
  border: 0;
  border-bottom: 1px dashed #333;
}
button {
  padding: 4px 7px;
  background-color: #3f6bca;
  border: 0;
  color: white;
  font-weight: bold;
}
@media screen and (min-width: 500px) {
  input {
    display: inline-block;
    width: 70%;
  }
}
@media screen and (min-width: 700px) {
  input {
    padding: 15px;
  }
  button {
    padding: 15px 30px;
  }
}

/* ELEMENTI NELL' ASIDE */
aside h2 {
  text-align: center;
  color: #333;
  font-size: 2rem;
  font-weight: bold;
  text-transform: uppercase;
  margin-bottom: 1em;
}
aside div {
  background-color: #e3e3e3;
  border: 1px solid #c3c3c3;
  margin-bottom: 1em;
  padding: 1em;
}

@media screen and (min-width: 1200px) {
  aside div {
    display: inline-block;
    width: 33.333%;
    margin-inline: -2px;
  }
}
aside div p:last-child {
  margin-bottom: 0;
  font-size: 0.8em;
  text-align: right;
}

/* FOOTER */
footer {
  background: rgb(53, 53, 53);
  background: linear-gradient(
    0deg,
    rgba(53, 53, 53, 1) 0%,
    rgba(5, 85, 103, 1) 68%
  );
  box-shadow: 0 3px 3px #444;
  color: #f0f0f0;
  padding: 1em;
  text-align: center;
  font-size: 1.2rem;
}

@media screen and (min-width: 800px) {
  footer {
    padding: 1em 12em;
  }
}

footer a {
  color: fuchsia;
}

@media screen and (min-width: 1200px) {
  header,
  main,
  footer {
    max-width: 1200px;
    margin-left: auto;
    margin-right: auto;
  }
}

@media print {
  body {
    font-size: 24px;
    padding: 0;
    background-image: none;
  }
  main {
    box-shadow: none;
    margin: 0;
  }
  thead tr {
    background-color: #d3d3d3;
    color: black;
  }
  thead tr,
  tbody tr {
    border-bottom: 1px solid #666;
  }

  header,
  article section,
  iframe,
  aside,
  footer,
  .social,
  .toTop {
    display: none;
  }
}

.imgLeft {
  float: left;
}

header {
  position: sticky;
  top: 0;
  z-index: 2;
}

section {
  position: relative;
  padding-top: 60px;
  padding-bottom: 60px;
}

section h2 {
  position: absolute;
  top: -29px;
  width: 30%;
  left: 40px;
}

.socialbottom {
  position: fixed;
  bottom: 0;
  right: 0;
  z-index: 3;
  display: inline-block;
}

.socialTop {
  position: fixed;
  top: 0;
  right: 0;
  z-index: 3;
  display: inline-block;
}

.btnSocial {
  width: 50px;
  height: 50px;
  margin: 10px;
  border-radius: 20%;
  opacity: 0.7;
  position: relative;
  background: rgba(255, 255, 255, 0.55);
  -webkit-backdrop-filter: blur(15px);
  backdrop-filter: blur(15px);
  border: 2px solid rgba(255, 255, 255, 0.275);
  -webkit-box-shadow: 2px 4px 4.5px 0.5px #4b4b4b;
  -moz-box-shadow: 2px 4px 4.5px 0.5px #4b4b4b;
  box-shadow: 1px 2px 3.5px 0.5px #4b4b4b;
  transition: 0.3s;
}

.btnSocial:hover {
  opacity: 1;
}

@media screen and (max-width: 700px) {
  .hidexs {
    display: none;
  }
  .showxs {
    display: block;
  }
}
@media screen and (min-width: 700px) {
  .hidexs {
    display: block;
  }
  .showxs {
    display: none;
  }
}
.btnSocial > i {
  position: absolute;
  top: 25%;
  left: 28%;
  font-size: 23px;
}
#addBtn {
  color: blue;
}
#calendar {
  color: blue;
}
#goTop {
  color: violet;
}

aside > div {
  position: relative;
}

.fa-tag {
  font-size: 70px;
  position: absolute;
  top: 15px;
  right: 15px;
  opacity: 0.1;
}
.titleDecor {
  position: relative;
}
.titleDecor > img {
  position: absolute;
  left: 0;
  top: 1.1em;
}
@media screen and (max-width: 480px) {
  .titleDecor > img {
    display: none;
  }
}
@media screen and (min-width: 1114px) {
  .titleDecor > img {
    position: absolute;
    left: unset;
    right: 20%;
  }
}

